contact page update

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,29 @@
     @apply font-sans;
   }
 }
+
+.swiper {
+  width: 90%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  padding: 40px 40px;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+  margin-bottom: 50px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 10%;
+  height: 10%;
+  object-fit: cover;
+  border-radius: 100%;
+}
